# postgres-dev

.github/workflows/: postgresql-ci.yml
contrib/: Makefile  meson.build
contrib/columnstore/: Makefile  README.md  columnstore--1.0.sql  columnstore.c  columnstore.control  cs_compact.c  cs_customscan.c  cs_insert.c  cs_internal.h  cs_reloptions.c  cs_scan.c  cs_slot.c  cs_storage.c  cs_vacuum.c  meson.build
contrib/columnstore/expected/: columnstore.out  cs_agg_pushdown.out  cs_compaction.out  cs_delete_update.out  cs_delete_visibility.out  cs_delta_columnar.out  cs_dictionary.out  cs_encoding.out  cs_fk_locking.out  cs_index.out  cs_index_vacuum_window.out  cs_index_visibility.out  cs_lock_for_update.out  cs_misc.out  cs_on_conflict_rr.out  cs_planner.out  cs_pushdown.out  cs_scan_paths.out  cs_select_for_update.out  cs_sort_key.out  cs_unique_dirty.out  cs_vacuum_concurrent.out  cs_vacuum_inflight.out  cs_vacuum_snapshot.out  cs_zonemap.out
contrib/columnstore/specs/: cs_delete_visibility.spec  cs_fk_locking.spec  cs_index_vacuum_window.spec  cs_index_visibility.spec  cs_lock_for_update.spec  cs_on_conflict_rr.spec  cs_select_for_update.spec  cs_unique_dirty.spec  cs_vacuum_concurrent.spec  cs_vacuum_inflight.spec  cs_vacuum_snapshot.spec
contrib/columnstore/sql/: columnstore.sql  cs_agg_pushdown.sql  cs_compaction.sql  cs_delete_update.sql  cs_delta_columnar.sql  cs_dictionary.sql  cs_encoding.sql  cs_index.sql  cs_misc.sql  cs_planner.sql  cs_pushdown.sql  cs_scan_paths.sql  cs_sort_key.sql  cs_zonemap.sql
contrib/columnstore/t/: 001_concurrent_inserts.pl  002_wal_consistency.pl  003_two_phase.pl  004_scale.pl
contrib/postgres_fdw/expected/: postgres_fdw.out
src/backend/access/common/: reloptions.c
src/backend/access/heap/: heapam_visibility.c
src/backend/commands/: explain.c  tablecmds.c
src/backend/executor/: nodeHash.c  nodeHashjoin.c
src/backend/optimizer/plan/: createplan.c  planner.c  setrefs.c
src/backend/utils/cache/: relcache.c
src/include/access/: heapam.h  reloptions.h  tableam.h
src/include/executor/: execScan.h  executor.h
src/include/nodes/: execnodes.h  plannodes.h
src/test/regress/expected/: eager_aggregate.out  join.out  join_hash.out  publication_ddl.out  window.out
src/test/regress/sql/: join.sql  join_hash.sql  publication_ddl.sql
src/tools/ci/: ci_macports_packages.sh
src/tools/pgindent/: typedefs.list
